--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                                         }`}
                                     >
                                         <div className="text-white font-semibold mb-1">Dollar Amount</div>
-                                        <div className="text-xs text-gray-400">Has a dollar cap</div>
+                                        <div className="text-xs text-gray-400">Has a dollar limit</div>
                                     </button>
                                     <button
                                         onClick={() => setBenefitData({ ...benefitData, type: 'one-time' })}
@@ -467,7 +467,7 @@
                                     onChange={(e) => setBenefitData({ ...benefitData, resetBasis: e.target.value })}
                                     className="w-full bg-white/5 border border-gray-700 rounded-lg px-4 py-3 text-white focus:outline-none focus:border-yellow-600"
                                 >
-                                    <option value="calendar">Calendar (1st of period)</option>
+                                    <option value="calendar">Calendar (1st of the month)</option>
                                     <option value="statement">Statement Date</option>
                                     <option value="anniversary">Card Anniversary</option>
                                 </select>
@@ -1028,13 +1028,6 @@
                             </div>
                         )}
 
-                        <button
-                            onClick={() => setShowAddBenefit(true)}
-                            className="w-full glass-effect rounded-xl p-4 text-white font-semibold hover:bg-white/10 transition-all"
-                        >
-                            + Add Custom Benefit
-                        </button>
-
                         {/* Delete Card Confirmation Dialog */}
                         {showDeleteConfirm && (
                             <div className="fixed inset-0 bg-black/60 backdrop-blur-sm flex items-center justify-center z-50 px-4">
@@ -1052,8 +1045,7 @@
                                         </button>
                                         <button
                                             onClick={() => {
-                                                // This will be handled by parent component
-                                                window.dispatchEvent(new CustomEvent('deleteCard', { detail: card.id }));
+                                                onDeleteCard(card.id);
                                                 setShowDeleteConfirm(false);
                                             }}
                                             className="flex-1 py-3 rounded-xl font-semibold text-white bg-red-600 hover:bg-red-700"
@@ -1097,61 +1089,6 @@
                         >
                             + Add Custom Benefit
                         </button>
-
-                        {/* Delete Card Confirmation */}
-                        {showDeleteConfirm && (
-                            <div className="fixed inset-0 bg-black/50 flex items-center justify-center p-4 z-50">
-                                <div className="glass-effect rounded-2xl p-6 max-w-md w-full">
-                                    <h3 className="text-xl font-bold text-white serif mb-3">Delete Card?</h3>
-                                    <p className="text-gray-300 mb-6">
-                                        Are you sure you want to delete {card.name}? This will permanently delete the card and all associated benefits and usage history. This action cannot be undone.
-                                    </p>
-                                    <div className="space-y-3">
-                                        <button
-                                            onClick={() => {
-                                                onDeleteCard(card.id);
-                                                setShowDeleteConfirm(false);
-                                            }}
-                                            className="w-full py-3 rounded-lg bg-red-500 hover:bg-red-600 text-white font-semibold transition-colors"
-                                        >
-                                            Delete
-                                        </button>
-                                        <button
-                                            onClick={() => setShowDeleteConfirm(false)}
-                                            className="w-full py-3 rounded-lg glass-effect text-white font-semibold"
-                                        >
-                                            Cancel
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        )}
-
-                        {/* Delete Benefit Confirmation */}
-                        {benefitToDelete && (
-                            <div className="fixed inset-0 bg-black/50 flex items-center justify-center p-4 z-50">
-                                <div className="glass-effect rounded-2xl p-6 max-w-md w-full">
-                                    <h3 className="text-xl font-bold text-white serif mb-3">Delete Benefit?</h3>
-                                    <p className="text-gray-300 mb-6">
-                                        Are you sure you want to delete this custom benefit? This action cannot be undone.
-                                    </p>
-                                    <div className="space-y-3">
-                                        <button
-                                            onClick={() => deleteBenefit(benefitToDelete)}
-                                            className="w-full py-3 rounded-lg bg-red-500 hover:bg-red-600 text-white font-semibold transition-colors"
-                                        >
-                                            Delete
-                                        </button>
-                                        <button
-                                            onClick={() => setBenefitToDelete(null)}
-                                            className="w-full py-3 rounded-lg glass-effect text-white font-semibold"
-                                        >
-                                            Cancel
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        )}
                     </div>
                 </div>
             );
