--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
             animation: checkBounce 0.3s ease-out;
         }
 
+        @keyframes pulse-glow {
+            0%, 100% { box-shadow: 0 0 5px rgba(239, 68, 68, 0.5); }
+            50% { box-shadow: 0 0 20px rgba(239, 68, 68, 0.8); }
+        }
+
+        .pulse-glow {
+            animation: pulse-glow 2s ease-in-out infinite;
+        }
+
         @keyframes fadeInUp {
             from {
                 opacity: 0;
@@ -351,6 +360,43 @@
             return resetDate;
         };
 
+        // Calculate days until reset
+        const calculateDaysUntil = (resetDate) => {
+            const now = new Date();
+            const diffTime = resetDate - now;
+            const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+            return diffDays;
+        };
+
+        // Get countdown color and urgency
+        const getCountdownStatus = (daysLeft) => {
+            if (daysLeft <= 3) {
+                return { color: 'red', urgent: true, class: 'bg-red-500/20 text-red-400 border-red-500/30' };
+            } else if (daysLeft <= 9) {
+                return { color: 'yellow', urgent: false, class: 'bg-yellow-500/20 text-yellow-400 border-yellow-500/30' };
+            } else {
+                return { color: 'green', urgent: false, class: 'bg-green-500/20 text-green-400 border-green-500/30' };
+            }
+        };
+
+        // Storage for dismissed urgent notifications
+        const dismissedStorage = {
+            get: () => {
+                const data = localStorage.getItem('dismissedUrgentBenefits');
+                return data ? JSON.parse(data) : [];
+            },
+            add: (benefitId) => {
+                const dismissed = dismissedStorage.get();
+                if (!dismissed.includes(benefitId)) {
+                    dismissed.push(benefitId);
+                    localStorage.setItem('dismissedUrgentBenefits', JSON.stringify(dismissed));
+                }
+            },
+            clear: () => {
+                localStorage.setItem('dismissedUrgentBenefits', JSON.stringify([]));
+            }
+        };
+
         // Components
         function AddBenefitView({ cardId, onAdd, onCancel }) {
             const [benefitData, setBenefitData] = useState({
@@ -502,11 +548,14 @@
             const [currentView, setCurrentView] = useState('home'); // home, addCard, cardDetail
             const [selectedCard, setSelectedCard] = useState(null);
             const [showAddBenefit, setShowAddBenefit] = useState(false);
+            const [dismissedUrgent, setDismissedUrgent] = useState([]);
+            const [showUrgentBar, setShowUrgentBar] = useState(true);
 
             useEffect(() => {
                 setCards(storage.getCards());
                 setBenefits(storage.getBenefits());
                 setUsages(storage.getUsages());
+                setDismissedUrgent(dismissedStorage.get());
 
                 // Listen for delete card events
                 const handleDeleteCard = (e) => {
@@ -633,14 +682,72 @@
                             <p className="text-gray-400">Track your premium benefits</p>
                         </header>
 
+                        {/* Urgent Benefits Notification Bar */}
+                        {(() => {
+                            const urgentBenefits = [];
+                            cards.forEach(card => {
+                                const cardBenefits = benefits.filter(b => b.cardId === card.id && !b.isHidden);
+                                cardBenefits.forEach(benefit => {
+                                    const isUsed = usages.some(u => u.benefitId === benefit.id && !u.isReset);
+                                    if (!isUsed && !dismissedUrgent.includes(benefit.id)) {
+                                        const resetDate = calculateNextReset(benefit, card);
+                                        const daysLeft = calculateDaysUntil(resetDate);
+                                        const status = getCountdownStatus(daysLeft);
+                                        if (status.urgent && daysLeft > 0) {
+                                            urgentBenefits.push({ card, benefit, daysLeft });
+                                        }
+                                    }
+                                });
+                            });
+
+                            if (urgentBenefits.length > 0 && showUrgentBar) {
+                                return (
+                                    <div className="bg-red-500/90 rounded-xl p-4 mb-6 fade-in-up">
+                                        <div className="flex items-start gap-3">
+                                            <svg className="w-5 h-5 text-white mt-0.5 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
+                                            </svg>
+                                            <div className="flex-1">
+                                                <p className="text-white font-semibold mb-1">
+                                                    {urgentBenefits.length} {urgentBenefits.length === 1 ? 'benefit' : 'benefits'} expiring soon
+                                                </p>
+                                                <p className="text-white/90 text-sm">
+                                                    {urgentBenefits.map((ub, idx) => (
+                                                        <span key={ub.benefit.id}>
+                                                            {ub.card.name}: {ub.benefit.name} ({ub.daysLeft} {ub.daysLeft === 1 ? 'day' : 'days'})
+                                                            {idx < urgentBenefits.length - 1 ? ', ' : ''}
+                                                        </span>
+                                                    ))}
+                                                </p>
+                                            </div>
+                                            <button 
+                                                onClick={() => {
+                                                    urgentBenefits.forEach(ub => dismissedStorage.add(ub.benefit.id));
+                                                    setDismissedUrgent(dismissedStorage.get());
+                                                    setShowUrgentBar(false);
+                                                }}
+                                                className="text-white/70 hover:text-white"
+                                            >
+                                                <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" />
+                                                </svg>
+                                            </button>
+                                        </div>
+                                    </div>
+                                );
+                            }
+                            return null;
+                        })()}
+
                         <div className="space-y-4">
                             {cards.map((card, idx) => {
                                 const cardBenefits = benefits.filter(b => b.cardId === card.id && !b.isHidden);
                                 
-                                // Calculate dollar values
+                                // Calculate dollar values and urgent count
                                 let dollarUsed = 0;
                                 let dollarAvailable = 0;
                                 let benefitsAvailable = 0;
+                                let urgentCount = 0;
 
                                 cardBenefits.forEach(b => {
                                     const isUsed = usages.some(u => u.benefitId === b.id && !u.isReset);
@@ -655,12 +762,22 @@
                                     } else if (!isUsed) {
                                         benefitsAvailable++;
                                     }
+
+                                    // Check if urgent
+                                    if (!isUsed) {
+                                        const resetDate = calculateNextReset(b, card);
+                                        const daysLeft = calculateDaysUntil(resetDate);
+                                        const status = getCountdownStatus(daysLeft);
+                                        if (status.urgent && daysLeft > 0) {
+                                            urgentCount++;
+                                        }
+                                    }
                                 });
 
                                 return (
                                     <div
                                         key={card.id}
-                                        className="card-shimmer glass-effect rounded-2xl p-6 cursor-pointer transform transition-all hover:scale-[1.02] fade-in-up"
+                                        className="relative card-shimmer glass-effect rounded-2xl p-6 cursor-pointer transform transition-all hover:scale-[1.02] fade-in-up"
                                         style={{ 
                                             background: card.color || 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)',
                                             animationDelay: `${idx * 0.1}s`
@@ -670,6 +787,11 @@
                                             setCurrentView('cardDetail');
                                         }}
                                     >
+                                        {urgentCount > 0 && (
+                                            <div className="absolute -top-2 -right-2 w-8 h-8 bg-red-500 rounded-full flex items-center justify-center text-white text-sm font-bold border-2 border-gray-900 shadow-lg">
+                                                {urgentCount}
+                                            </div>
+                                        )}
                                         <div className="flex justify-between items-start mb-4">
                                             <div>
                                                 <h3 className="text-xl font-semibold text-white serif mb-1">{card.name}</h3>
@@ -947,18 +1069,40 @@
                                 {visibleBenefits.map((benefit) => {
                                     const isUsed = usages.some(u => u.benefitId === benefit.id && !u.isReset);
                                     const usage = usages.find(u => u.benefitId === benefit.id && !u.isReset);
+                                    
+                                    const resetDate = calculateNextReset(benefit, card);
+                                    const daysLeft = calculateDaysUntil(resetDate);
+                                    const status = getCountdownStatus(daysLeft);
 
                                     return (
                                         <div
                                             key={benefit.id}
-                                            className="glass-effect rounded-xl p-4"
+                                            className={`glass-effect rounded-xl p-4 transition-all ${
+                                                !isUsed && status.urgent && daysLeft > 0 
+                                                    ? 'border-2 border-red-500/50 pulse-glow' 
+                                                    : ''
+                                            }`}
                                         >
                                             <div className="flex items-start justify-between">
                                                 <div className="flex-1">
-                                                    <h4 className="text-white font-medium mb-1">{benefit.name}</h4>
-                                                    <p className="text-sm text-gray-400 mb-2">
-                                                        {benefit.interval.charAt(0).toUpperCase() + benefit.interval.slice(1)}
-                                                    </p>
+                                                    <h4 className="text-white font-medium mb-2">{benefit.name}</h4>
+                                                    <div className="flex items-center gap-2 flex-wrap mb-2">
+                                                        <span className="text-sm text-gray-400">
+                                                            {benefit.interval.charAt(0).toUpperCase() + benefit.interval.slice(1)}
+                                                        </span>
+                                                        {daysLeft > 0 && (
+                                                            <span className={`px-2 py-1 rounded-full text-xs font-medium border ${
+                                                                isUsed 
+                                                                    ? 'bg-gray-700/50 text-gray-400 border-gray-700'
+                                                                    : status.class
+                                                            }`}>
+                                                                {isUsed 
+                                                                    ? `Resets in ${daysLeft} ${daysLeft === 1 ? 'day' : 'days'}`
+                                                                    : `${daysLeft} ${daysLeft === 1 ? 'day' : 'days'} left${status.urgent ? '!' : ''}`
+                                                                }
+                                                            </span>
+                                                        )}
+                                                    </div>
                                                     {usage && (
                                                         <p className="text-xs text-gray-500">
                                                             Used: {new Date(usage.usedDate).toLocaleDateString()}
